--- a/configs/rock960-rk3399_defconfig
+++ b/configs/rock960-rk3399_defconfig
@@ -67,3 +67,9 @@ CONFIG_VIDEO_BPP32=y
 CONFIG_DISPLAY=y
 CONFIG_VIDEO_ROCKCHIP=y
 CONFIG_DISPLAY_ROCKCHIP_HDMI=y
+CONFIG_CMD_PCI=y
+CONFIG_PCI=y
+CONFIG_PCIE_ROCKCHIP=y
+CONFIG_NVME=y
+CONFIG_DM_RESET=y
+CONFIG_MISC_INIT_R=y
