--- a/arch/riscv/dts/hifive-unleashed-a00-u-boot.dtsi
+++ b/arch/riscv/dts/hifive-unleashed-a00-u-boot.dtsi
@@ -12,6 +12,10 @@
 		spi2 = &qspi2;
 	};
 
+	config {
+		u-boot,spl-payload-offset = <0x105000>; /* @ 1044KB */
+	};
+
 	hfclk {
 		u-boot,dm-spl;
 	};
@@ -20,6 +24,14 @@
 		u-boot,dm-spl;
 	};
 
+};
+
+&qspi0 {
+	u-boot,dm-spl;
+
+	flash@0 {
+		u-boot,dm-spl;
+	};
 };
 
 &qspi2 {
