--- a/drivers/ram/Kconfig
+++ b/drivers/ram/Kconfig
@@ -75,3 +75,4 @@ config IMXRT_SDRAM
 
 source "drivers/ram/rockchip/Kconfig"
 source "drivers/ram/stm32mp1/Kconfig"
+source "drivers/ram/sifive/Kconfig"
