mtd: spi: Separate dm vs nodm SF code
Right now, the sf have common driver to handle
both dm and nodm code, where nondm has spi_flash
probe and dm has U_BOOT_DRIVER for dm spi flash.

Having a common code base for dm and nodm with
ifdef make it difficult to extend functionalities
and also difficult to read.

So, keep them separate and give scope to dm code
for further enhancements.

Cc: Simon Glass <sjg@chromium.org>
Cc: Vignesh R <vigneshr@ti.com>
Cc: Daniel Schwierzeck <daniel.schwierzeck@gmail.com>
Signed-off-by: Jagan Teki <jagan@amarulasolutions.com>

--- a/drivers/mtd/spi/Makefile
+++ b/drivers/mtd/spi/Makefile
@@ -3,8 +3,12 @@
 # (C) Copyright 2006
 # Wolfgang Denk, DENX Software Engineering, wd@denx.de.
 
-obj-$(CONFIG_DM_SPI_FLASH) += sf-uclass.o
-spi-nor-y := sf_probe.o spi-nor-ids.o
+ifdef CONFIG_DM_SPI_FLASH
+spi-nor-y += sf-uclass.o
+else
+spi-nor-y += sf-nodm.o
+endif
+spi-nor-y += spi-nor-ids.o
 
 ifdef CONFIG_SPL_BUILD
 obj-$(CONFIG_SPL_SPI_BOOT)	+= fsl_espi_spl.o
