mtd: Add SPL_DM_MTD option
Add SPL option for DM_MTD.

Cc: Simon Glass <sjg@chromium.org>
Cc: Vignesh R <vigneshr@ti.com>
Signed-off-by: Jagan Teki <jagan@amarulasolutions.com>

--- a/drivers/mtd/Kconfig
+++ b/drivers/mtd/Kconfig
@@ -17,6 +17,14 @@ config DM_MTD
 	  flash, RAM and similar chips, often used for solid state file
 	  systems on embedded devices.
 
+config SPL_DM_MTD
+	bool "Enable Driver Model for MTD drivers in SPL"
+	depends on SPL_DM
+	help
+	  Enable driver model for Memory Technology Devices (MTD), such as
+	  flash, RAM and similar chips, often used for solid state file
+	  systems on embedded devices.
+
 config MTD_NOR_FLASH
 	bool "Enable parallel NOR flash support"
 	help
