roc-rk3399-pc: Add SPL board_early_init_f
Signed-off-by: Suniel Mahesh <sunil@amarulasolutions.com>
Signed-off-by: Jagan Teki <jagan@amarulasolutions.com>

--- a/arch/arm/dts/rk3399-roc-pc-u-boot.dtsi
+++ b/arch/arm/dts/rk3399-roc-pc-u-boot.dtsi
@@ -56,3 +56,16 @@
 &vcc_sdio {
 	regulator-always-on;
 };
+
+&pcfg_pull_none_12ma {
+	u-boot,dm-pre-reloc;
+};
+
+&i2c2 {
+	u-boot,dm-pre-reloc;
+	status= "okay";
+};
+
+&i2c2_xfer {
+	u-boot,dm-pre-reloc;
+};
