spi: Kirkwood: Drop non-DM support and enable DM_SPI on all boards
Dropped DM supprot for Kirkwood
Enable DM_SPI on all boards using Kirkwood

Signed-off-by: Bhargav Shah <bhargavshah1988@gmail.com>
Reviewed-by: Stefan Roese <sr@denx.de>

--- a/configs/crs305-1g-4s_defconfig
+++ b/configs/crs305-1g-4s_defconfig
@@ -48,4 +48,6 @@ CONFIG_SPI_FLASH_WINBOND=y
 CONFIG_PCI=y
 CONFIG_PCI_MVEBU=y
 CONFIG_SYS_NS16550=y
+CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_KIRKWOOD_SPI=y
