--- a/configs/db-88f6720_defconfig
+++ b/configs/db-88f6720_defconfig
@@ -56,6 +56,8 @@ CONFIG_MVPP2=y
 CONFIG_MII=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
+CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_KIRKWOOD_SPI=y
 CONFIG_USB=y
 CONFIG_DM_USB=y
