--- a/configs/maxbcm_defconfig
+++ b/configs/maxbcm_defconfig
@@ -46,4 +46,6 @@ CONFIG_MVNETA=y
 CONFIG_MII=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
+CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_KIRKWOOD_SPI=y
