spi: mxc: Drop non-DM support and enable DM_SPI on all boards
+ Dropped DM supprot for mxc spi
+ enable DM_SPI on all boards using mxc spi

Signed-off-by: Bhargav Shah <bhargavshah1988@gmail.com>

--- a/configs/display5_factory_defconfig
+++ b/configs/display5_factory_defconfig
@@ -113,6 +113,7 @@ CONFIG_DM_REGULATOR=y
 CONFIG_DM_REGULATOR_PFUZE100=y
 CONFIG_MXC_UART=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_SYSRESET=y
 CONFIG_SYSRESET_WATCHDOG=y
