--- a/configs/mccmon6_sd_defconfig
+++ b/configs/mccmon6_sd_defconfig
@@ -78,5 +78,6 @@ CONFIG_DM_REGULATOR_PFUZE100=y
 # CONFIG_SPL_SERIAL_PRESENT is not set
 CONFIG_MXC_UART=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_DM_THERMAL=y
