--- a/configs/mx31pdk_defconfig
+++ b/configs/mx31pdk_defconfig
@@ -36,5 +36,7 @@ CONFIG_NAND_MXC=y
 CONFIG_SMC911X=y
 CONFIG_SMC911X_BASE=0xB6000000
 CONFIG_SMC911X_32_BIT=y
+CONFIG_DM=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
