--- a/configs/mx51evk_defconfig
+++ b/configs/mx51evk_defconfig
@@ -28,7 +28,9 @@ CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_FSL_ESDHC_IMX=y
 CONFIG_MTD=y
 CONFIG_MII=y
+CONFIG_DM=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_MX5=y
