--- a/configs/pfla02_defconfig
+++ b/configs/pfla02_defconfig
@@ -66,6 +66,7 @@ CONFIG_PHY_MICREL_KSZ90X1=y
 CONFIG_FEC_MXC=y
 CONFIG_MII=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_DM_THERMAL=y
 CONFIG_OF_LIBFDT=y
