--- a/configs/marsboard_defconfig
+++ b/configs/marsboard_defconfig
@@ -32,7 +32,9 @@ CONFIG_SPI_FLASH_SST=y
 CONFIG_PHYLIB=y
 CONFIG_PHY_ATHEROS=y
 CONFIG_MII=y
+CONFIG_DM=y
 CONFIG_SPI=y
+CONFIG_SPI_DM=y
 CONFIG_MXC_SPI=y
 CONFIG_DM_THERMAL=y
 CONFIG_USB=y
