--- a/configs/mccmon6_nor_defconfig
+++ b/configs/mccmon6_nor_defconfig
@@ -81,6 +81,7 @@ CONFIG_DM_REGULATOR_PFUZE100=y
 # CONFIG_SPL_SERIAL_PRESENT is not set
 CONFIG_MXC_UART=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_DM_THERMAL=y
 CONFIG_SPL_TINY_MEMSET=y
