--- a/configs/mx35pdk_defconfig
+++ b/configs/mx35pdk_defconfig
@@ -44,7 +44,9 @@ CONFIG_NAND_MXC=y
 CONFIG_MII=y
 CONFIG_SMC911X=y
 CONFIG_SMC911X_BASE=0xB6000000
+CONFIG_DM=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
