--- a/configs/ot1200_defconfig
+++ b/configs/ot1200_defconfig
@@ -48,6 +48,7 @@ CONFIG_PHYLIB=y
 CONFIG_PHY_SMSC=y
 CONFIG_MII=y
 CONFIG_SPI=y
+CONFIG_DM_SPI=y
 CONFIG_MXC_SPI=y
 CONFIG_DM_THERMAL=y
 CONFIG_USB=y
